# WarpRadar

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_debug.py  test_full_no_network.py  test_keyboard_enhanced.py  test_transfer.py  test_ui_only.py
tests/: conftest.py  test_app.py  test_beacon.py  test_chat_e2e.py  test_crypto.py  test_format.py  test_history.py  test_incremental.py  test_integrity.py  test_keyboard.py  test_minimal.py  test_sockets.py
warpradar/: __init__.py  __main__.py  app.py  config.py
warpradar/discovery/: __init__.py  beacon.py  listener.py  registry.py
warpradar/security/: __init__.py  crypto.py  integrity.py
warpradar/transport/: __init__.py  client.py  handshake.py  protocol.py  server.py  streamer.py
warpradar/ui/: __init__.py  chat.py  file_picker.py  notifications.py  peer_list.py  progress.py  radar.py  styles.tcss
warpradar/utils/: blackhole.py  clipboard.py  debug_log.py  history.py  system.py
